add showmore, validator fix

--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -4,27 +4,28 @@
             <svg class="header__logo-icon" width = "200" height = "50">
                 <use href="./images/01-header/icons.svg#logo-milk"></use>
             </svg>
+         </a>   
 
         <nav class="header__nav">
             <ul class="header__list">
                 <li class="header__item">
-                    <a href="" class="header__link header__link--current">Home</a>
+                    <a href="" class = "header__link header__link--current">Home</a>
                 </li>
 
                 <li class="header__item">
-                    <a href="" class="header__link">About us</a>
+                    <a href="./" class = "header__link">About us</a>
                 </li>
 
                 <li class="header__item">
-                    <a href="" class="header__link">How it’s made?</a>
+                    <a href="./" class= "header__link">How it’s made?</a>
                 </li>
 
                 <li class="header__item">
-                    <a href="" class="header__link">Our products</a>
+                    <a href="./" class= "header__link">Our products</a>
                 </li>
 
                 <li class="header__item">
-                    <a href="" class="header__link">Contact</a>
+                    <a href="./" class = "header__link">Contact</a>
                 </li>        
             </ul>
         </nav>
@@ -41,7 +42,6 @@
             </button> 
         </div>
     </div>
-</header>
 
           <!-- MOBILE MENU -->
     <div class="backdrop is-hidden" data-menu>
@@ -85,9 +85,7 @@
             
         </div>
     </div>     
-
-</header>
-
+</header>    
 
     
 
