--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -84,8 +84,12 @@
 
             <div class="hero__info-wrap">
                 
-                <p class="hero__infotext"
-                data-config='{ "btnClass": "btn__info", "type": "text", "limit": 10, "more": " "}'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            <p class="hero__infotext"
+            data-config='{ "btnClass": "hero__button--showmore", "type": "text", "limit": 102, "more": " "}'
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, dolores?
+            </p>
 <!-- 
                 <button class="btn-info btn">
                     <svg width = "20" height = "12">
