--- a/src/partials/08-contacts.html
+++ b/src/partials/08-contacts.html
@@ -77,7 +77,7 @@
         </ul>
         <ul class="location__button">
             <li class="location__button-item">
-                <button class="location__button-loc">
+                <button class="location__button-loc" data-modal-open>
                     <span class="location__button-text">Our Locations</span>
                     <svg class="location__button-icon-loc" width="6" height="10">
                         <use href="./images/01-header/icons.svg#arrow"></use>
@@ -93,5 +93,21 @@
                 </button>
             </li>
         </ul>
+    </div>
+
+
+    <div class="backdrop-location is-hidden" data-modal>
+        <div class="modal-location">
+            <button type="button" class="modal__close-btn" data-modal-close>
+                <svg class="modal__close" width="18" height="18">
+                    <use href="./images/01-header/icons.svg#close-icon"></use>
+                </svg>
+            </button>
+            <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d380513.7160180089!2d-88.01215000586734!3d41.83339249957158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2z0KfQuNC60LDSkdC-LCDQhtC70LvRltC90L7QudGBLCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1656942243465!5m2!1suk!2sua"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </div>
 </section>
