--- a/src/partials/07-reviews.html
+++ b/src/partials/07-reviews.html
@@ -1,4 +1,5 @@
 <section class="container review-section">
+  <h1>Customers review</h1>
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="review swiper-slide">
