--- a/src/partials/06-gallery.html
+++ b/src/partials/06-gallery.html
@@ -1,4 +1,5 @@
 <section class="gallery-container">
+  <h1>Gallery</h1>
   <div class="gallery gallery-content">
     <a
       class="gallery-content__img"
