--- a/src/sass/components/_06-gallery.scss
+++ b/src/sass/components/_06-gallery.scss
@@ -13,9 +13,9 @@
         padding: 120px 0;
     }
 
-    & h1{
-        display: none;
-    }
+    // & h2{
+    //     @include visually-hidden;
+    // }
 }
 
 .gallery-content{
