--- a/src/partials/06-gallery.html
+++ b/src/partials/06-gallery.html
@@ -1,5 +1,5 @@
 <section class="gallery-container">
-  <h2>Gallery</h2>
+  <h2 class="gallery-title">Gallery</h2>
   <div class="gallery gallery-content">
     <a
       class="gallery-content__img"
