--- a/src/partials/07-reviews.html
+++ b/src/partials/07-reviews.html
@@ -1,5 +1,5 @@
 <section class="container review-section">
-  <h2>Customers review</h2>
+  <h2 class="review-title">Customers review</h2>
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="review swiper-slide">
