--- a/src/partials/08-contacts.html
+++ b/src/partials/08-contacts.html
@@ -1,113 +1,130 @@
 <section class="location">
-    <div class="container">
-        <h2 class="location__title">Contacts</h2>
-        <ul class="location__list">
-            <li class="location__item">
-                <span class="location__point">CAFE</span>
-                <p class="location__city">
-                    Chicago
-                </p>
-                <p class="location__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <ul class="location__schedule">
-                    <li>
-                        <b class="location__working-mode">Monday - Friday</b>
-                        <p class="location__working-hours">06:00 AM - 10:00 PM</p>
-                    </li>
-                    <li>
-                        <b class="location__working-mode">Saturday - Sunday</b>
-                        <p class="location__working-hours">08:00 AM - 16:00 PM</p>
-                    </li>
-                </ul>
-                <ul class="location__contacts">
-                    <li class="location__contacts-item"><a href="tel:+610383766284"
-                            class="location__contacts-link">+61(0)383766
-                            284</a>
-                    </li>
-                    <li class="location__contacts-item"><a href="malito:noreply@envato.com"
-                            class="location__contacts-link">noreply@envato.com</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="location__item">
-                <span class="location__point location__LosAgneles">FOODTRUCK</span>
-                <p class="location__city">Los Angeles</p>
-                <p class="location__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <ul class="location__schedule">
-                    <li><b class="location__working-mode">Monday - Friday</b>
-                        <p class="location__working-hours">06:00 AM - 10:00 PM</p>
-                    </li>
-                    <li><b class="location__working-mode">Saturday - Sunday</b>
-                        <p class="location__working-hours">08:00 AM - 16:00 PM</p>
-                    </li>
-                </ul>
-                <ul class="location__contacts">
-                    <li class="location__contacts-item"><a href="tel:+610383766284"
-                            class="location__contacts-link">+61(0)383766
-                            284</a>
-                    </li>
-                    <li class="location__contacts-item"><a href="malito:noreply@envato.com"
-                            class="location__contacts-link">noreply@envato.com</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="location__item">
-                <span class="location__point">CAFE</span>
-                <p class="location__city">New York</p>
-                <p class="location__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                <ul class="location__schedule">
-                    <li>
-                        <b class="location__working-mode">Monday - Friday</b>
-                        <p class="location__working-hours">06:00 AM - 10:00 PM</p>
-                    </li>
-                    <li>
-                        <b class="location__working-mode">Saturday - Sunday</b>
-                        <p class="location__working-hours">08:00 AM - 16:00 PM</p>
-                    </li>
-                </ul>
-                <ul class="location__contacts">
-                    <li class="location__contacts-item"><a href="tel:+610383766284"
-                            class="location__contacts-link">+61(0)383766
-                            284</a>
-                    </li>
-                    <li class="location__contacts-item"><a href="malito:noreply@envato.com"
-                            class="location__contacts-link">noreply@envato.com</a>
-                    </li>
-                </ul>
-            </li>
+  <div class="container">
+    <h2 class="location__title">Contacts</h2>
+    <ul class="location__list">
+      <li class="location__item">
+        <span class="location__point">CAFE</span>
+        <p class="location__city">Chicago</p>
+        <p class="location__text">
+          Fusce ut velit laoreet, tempus arcu molestie vulputate
+        </p>
+        <ul class="location__schedule">
+          <li>
+            <b class="location__working-mode">Monday - Friday</b>
+            <p class="location__working-hours">06:00 AM - 10:00 PM</p>
+          </li>
+          <li>
+            <b class="location__working-mode">Saturday - Sunday</b>
+            <p class="location__working-hours">08:00 AM - 16:00 PM</p>
+          </li>
         </ul>
-        <ul class="location__button">
-            <li class="location__button-item">
-                <button class="location__button-loc" data-modal-open>
-                    <span class="location__button-text">Our Locations</span>
-                    <svg class="location__button-icon-loc" width="6" height="10">
-                        <use href="./images/01-header/icons.svg#arrow"></use>
-                    </svg>
-                </button>
-            </li>
-            <li class="location__button-item">
-                <button class="location__button-fran">
-                    <span class="location__button-text">Franchise</span>
-                    <svg class="location__button-icon-fran" width="6" height="10">
-                        <use href="./images/01-header/icons.svg#arrow-red"></use>
-                    </svg>
-                </button>
-            </li>
+        <ul class="location__contacts">
+          <li class="location__contacts-item">
+            <a href="tel:+610383766284" class="location__contacts-link"
+              >+61(0)383766 284</a
+            >
+          </li>
+          <li class="location__contacts-item">
+            <a href="malito:noreply@envato.com" class="location__contacts-link"
+              >noreply@envato.com</a
+            >
+          </li>
         </ul>
-    </div>
+      </li>
+      <li class="location__item">
+        <span class="location__point location__LosAgneles">FOODTRUCK</span>
+        <p class="location__city">Los Angeles</p>
+        <p class="location__text">
+          Fusce ut velit laoreet, tempus arcu molestie vulputate
+        </p>
+        <ul class="location__schedule">
+          <li>
+            <b class="location__working-mode">Monday - Friday</b>
+            <p class="location__working-hours">06:00 AM - 10:00 PM</p>
+          </li>
+          <li>
+            <b class="location__working-mode">Saturday - Sunday</b>
+            <p class="location__working-hours">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
+        <ul class="location__contacts">
+          <li class="location__contacts-item">
+            <a href="tel:+610383766284" class="location__contacts-link"
+              >+61(0)383766 284</a
+            >
+          </li>
+          <li class="location__contacts-item">
+            <a href="malito:noreply@envato.com" class="location__contacts-link"
+              >noreply@envato.com</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li class="location__item">
+        <span class="location__point">CAFE</span>
+        <p class="location__city">New York</p>
+        <p class="location__text">
+          Fusce ut velit laoreet, tempus arcu molestie vulputate
+        </p>
+        <ul class="location__schedule">
+          <li>
+            <b class="location__working-mode">Monday - Friday</b>
+            <p class="location__working-hours">06:00 AM - 10:00 PM</p>
+          </li>
+          <li>
+            <b class="location__working-mode">Saturday - Sunday</b>
+            <p class="location__working-hours">08:00 AM - 16:00 PM</p>
+          </li>
+        </ul>
+        <ul class="location__contacts">
+          <li class="location__contacts-item">
+            <a href="tel:+610383766284" class="location__contacts-link"
+              >+61(0)383766 284</a
+            >
+          </li>
+          <li class="location__contacts-item">
+            <a href="malito:noreply@envato.com" class="location__contacts-link"
+              >noreply@envato.com</a
+            >
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="location__button">
+      <li class="location__button-item">
+        <button class="location__button-loc" data-modal-open>
+          <span class="location__button-text">Our Locations</span>
+          <svg class="location__button-icon-loc" width="6" height="10">
+            <use href="./images/01-header/icons.svg#arrow"></use>
+          </svg>
+        </button>
+      </li>
+      <li class="location__button-item">
+        <button class="location__button-fran" data-modal-open>
+          <span class="location__button-text">Franchise</span>
+          <svg class="location__button-icon-fran" width="6" height="10">
+            <use href="./images/01-header/icons.svg#arrow-red"></use>
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </div>
 
-
-    <div class="backdrop-location is-hidden" data-modal>
-        <div class="modal-location">
-            <button type="button" class="modal__close-btn" data-modal-close>
-                <svg class="modal__close" width="18" height="18">
-                    <use href="./images/01-header/icons.svg#close-icon"></use>
-                </svg>
-            </button>
-            <p class="modal__title">Оставьте свои данные, мы вам перезвоним</p>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d380513.7160180089!2d-88.01215000586734!3d41.83339249957158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2z0KfQuNC60LDSkdC-LCDQhtC70LvRltC90L7QudGBLCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1656942243465!5m2!1suk!2sua"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+  <div class="backdrop-location is-hidden" data-modal>
+    <div class="modal-location">
+      <button type="button" class="modal-location__close-btn" data-modal-close>
+        <svg class="modal-location__close" width="18" height="18">
+          <use href="./images/01-header/icons.svg#close-icon"></use>
+        </svg>
+      </button>
+      <iframe
+        class="modal-location__iframe"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d380513.7160180089!2d-88.01215000586734!3d41.83339249957158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2z0KfQuNC60LDSkdC-LCDQhtC70LvRltC90L7QudGBLCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1656942243465!5m2!1suk!2sua"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
+  </div>
 </section>
