--- a/src/sass/components/_08-contacts.scss
+++ b/src/sass/components/_08-contacts.scss
@@ -292,7 +292,71 @@
   fill: var(--iconColorTertiary);
 }
 
+.backdrop-location{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 4;
+
+  &.is-hidden {
+    visibility: hidden;
+    pointer-events: none;
+  }
+}
+
+
+
 .modal-location {
-  width: 650px;
-  height: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+
+  @include mq(tab){
+    width: 70%;
+  }
+}
+
+.modal-location__iframe {
+  width: 100%;
+  height: 400px;
+
+  @include mq(tab){
+    height: 500px;
+  }
+
+  @include mq(desc){
+    height: 600px;
+  }
+}
+
+.modal-location__close-btn{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: var(--bgColorPrimary);
+  border: 0px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  &:hover,
+  &:focus {
+    background-color: var(--btnBgColorHover);
+  }
+}
+
+.modal-location__close{
+  fill: var(--colorSecondary);
+  transition-property: fill;
+  @include transition;
 }
