--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -33,7 +33,10 @@
                 ./images/01-header/icecream-mob-2x-min.png 2x"
                 media="(min-width: 320px)">
 
-            <img class="hero__image--icecream" src="./images/01-header/icecream-desk-min.png" alt="icecream">
+            <img class="hero__image--icecream"
+                src="./images/01-header/icecream-desk-min.png"
+                alt="icecream"
+                loading = "lazy">
 
         </picture>
         <picture>
@@ -47,7 +50,9 @@
                 ./images/01-header/girl-tab-2x-min.png 2x"
                 media="(min-width: 768px)">
 
-            <img class="hero__image--girl" src="./images/01-header/girl-desk-min.png" alt="girl wiwth icecream">
+            <img class="hero__image--girl" src="./images/01-header/girl-desk-min.png"
+            alt="girl wiwth icecream"
+            loading = "lazy">
 
         </picture>
 
@@ -79,6 +84,7 @@
                 class="hero-img--milk"
                 src="./images/01-header/milk-desk-min.png"
                 alt="Eco Milk"
+                loading = "lazy"
                 />
             </picture>
 
@@ -90,13 +96,6 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, dolores?
             </p>
-<!-- 
-                <button class="btn-info btn">
-                    <svg width = "20" height = "12">
-                        <use href = "./images/01-header/icons.svg#arrow-right"></use>
-                    </svg>
-
-                </button> -->
             </div>
         </div>      
     </div>
