--- a/src/partials/08-contacts.html
+++ b/src/partials/08-contacts.html
@@ -100,7 +100,7 @@
         </button>
       </li>
       <li class="location__button-item">
-        <button class="location__button-fran" data-modal-open>
+        <button class="location__button-fran" data-modal-open-second>
           <span class="location__button-text">Franchise</span>
           <svg class="location__button-icon-fran" width="6" height="10">
             <use href="./images/01-header/icons.svg#arrow-red"></use>
