--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -33,7 +33,7 @@
                 ./images/01-header/icecream-mob-2x-min.png 2x"
                 media="(min-width: 320px)">
 
-            <img class="hero__image--icecream"
+            <img class="hero__image--icecream animate__animated animate__bounce"
                 src="./images/01-header/icecream-desk-min.png"
                 alt="icecream"
                 loading = "lazy">
@@ -56,7 +56,7 @@
 
         </picture>
 
-        <h1 class="hero__title">ice cream made with <span class="hero__title--additional">passion</span></h1>
+        <h1 class="hero__title animate__bounce">ice cream made with <span class="hero__title--additional">passion</span></h1>
         
         <ul class="hero__list">
             <li class="hero__item">
@@ -90,11 +90,11 @@
 
             <div class="hero__info-wrap">
                 
-            <p class="hero__infotext"
-            data-config='{ "btnClass": "hero__button--showmore", "type": "text", "limit": 102, "more": " "}'
-            >
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, dolores?
+                <p class="hero__infotext"
+                data-config='{ "btnClass": "hero__button--showmore", "type": "text", "limit": 102, "more": " "}'
+                >
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, dolores?
             </p>
             </div>
         </div>      
