--- a/src/partials/08-contacts.html
+++ b/src/partials/08-contacts.html
@@ -88,7 +88,7 @@
                 <button class="location__button-fran">
                     <span class="location__button-text">Franchise</span>
                     <svg class="location__button-icon-fran" width="6" height="10">
-                        <use href="./images/01-header/icons.svg#arrow-red"></use>
+                        <use href="./images/01-header/icons.svg#btn-icon"></use>
                     </svg>
                 </button>
             </li>
