added ids to sections

--- a/src/partials/06-gallery.html
+++ b/src/partials/06-gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery-container">
+<section class="gallery-container" id="gallery">
   <h2 class="gallery-title">Gallery</h2>
   <div class="gallery gallery-content">
     <a
