--- a/src/partials/08-contacts.html
+++ b/src/partials/08-contacts.html
@@ -1,4 +1,4 @@
-<section class="location">
+<section class="location" id="contacts">
   <div class="container">
     <h2 class="location__title">Contacts</h2>
     <ul class="location__list">
