--- a/src/partials/03-products.html
+++ b/src/partials/03-products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="products">
   <div
     class="container container--products-mobile container--products-tablet container--product-desktop"
   >
