--- a/src/partials/09-footer.html
+++ b/src/partials/09-footer.html
@@ -1,33 +1,56 @@
-<footer class="footer">
-    <div class="container footer__box">
+<footer class="footer" id="footer">
+  <div class="container footer__box">
     <div class="footer__container">
-        <p class="footer__text">homemade ice cream made </p>
-        <p class="footer__passion">with passion</p>
+      <p class="footer__text">homemade ice cream made</p>
+      <p class="footer__passion">with passion</p>
     </div>
     <div class="footer__join">
-        <ul class="footer__join-list">
-            <li class="footer__join--link"><a target="_blank" class="footer__join--item" href="https://github.com/">
-                <svg class="footer__join--icon footer__githab">
-                    <use href="./images/01-header/icons.svg#github"></use>
-                </svg>
-                </a></li>
-            <li class="footer__join--link"><a target="_blank" class="footer__join--item" href="https://web.telegram.org/">
-                <svg class="footer__join--icon footer__telegram">
-                    <use href="./images/01-header/icons.svg#telegram"></use>
-                </svg>
-                </a></li>
-            <li class="footer__join--link"><a target="_blank" class="footer__join--item" href="https://m.facebook.com/">
-                <svg class="footer__join--icon footer__facebook">
-                    <use href="./images/01-header/icons.svg#facebook"></use>
-                </svg>
-                </a>
-            </li>
-        </ul>
-         <p class="footer__address--text">Feel free to contact <a class="footer__address--link" href="tel:610383766284">+61 &#40;0&#41; 383 766 284</a></p>
+      <ul class="footer__join-list">
+        <li class="footer__join--link">
+          <a
+            target="_blank"
+            class="footer__join--item"
+            href="https://github.com/"
+          >
+            <svg class="footer__join--icon footer__githab">
+              <use href="./images/01-header/icons.svg#github"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__join--link">
+          <a
+            target="_blank"
+            class="footer__join--item"
+            href="https://web.telegram.org/"
+          >
+            <svg class="footer__join--icon footer__telegram">
+              <use href="./images/01-header/icons.svg#telegram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer__join--link">
+          <a
+            target="_blank"
+            class="footer__join--item"
+            href="https://m.facebook.com/"
+          >
+            <svg class="footer__join--icon footer__facebook">
+              <use href="./images/01-header/icons.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <p class="footer__address--text">
+        Feel free to contact
+        <a class="footer__address--link" href="tel:610383766284"
+          >+61 &#40;0&#41; 383 766 284</a
+        >
+      </p>
     </div>
-    </div>
-    <div class="footer__years">
-        <p class="footer__years--text">	&#169; 2022 &#45; IceCream.
-All Rights Reserved. </p>
-    </div>
+  </div>
+  <div class="footer__years">
+    <p class="footer__years--text">
+      &#169; 2022 &#45; IceCream. All Rights Reserved.
+    </p>
+  </div>
 </footer>
