--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -17,6 +17,7 @@
                 <p class="info__title">food trucks</p>
             </li>
         </ul>
+        
         <picture>
             <source srcset="
                 images/01-header/icecream-desk-min.png 1x,
@@ -33,12 +34,13 @@
                 ./images/01-header/icecream-mob-2x-min.png 2x"
                 media="(min-width: 320px)">
 
-            <img class="hero__image--icecream animate__animated animate__bounce"
+            <img data-aos="fade-left" class="hero__image--icecream animate__animated animate__bounce"
                 src="./images/01-header/icecream-desk-min.png"
                 alt="icecream"
                 loading = "lazy">
 
         </picture>
+        
         <picture>
             
             <source srcset="
@@ -50,13 +52,15 @@
                 ./images/01-header/girl-tab-2x-min.png 2x"
                 media="(min-width: 768px)">
 
-            <img class="hero__image--girl" src="./images/01-header/girl-desk-min.png"
-            alt="girl wiwth icecream"
-            loading = "lazy">
+                
+                    <img data-aos="fade-left" class="hero__image--girl" src="./images/01-header/girl-desk-min.png"
+                    alt="girl wiwth icecream"
+                    loading = "lazy">
+
 
         </picture>
 
-        <h1 class="hero__title animate__bounce">ice cream made with <span class="hero__title--additional">passion</span></h1>
+        <h1 class="hero__title">ice cream made with <span class="hero__title--additional">passion</span></h1>
         
         <ul class="hero__list">
             <li class="hero__item">
