--- a/src/partials/04-about.html
+++ b/src/partials/04-about.html
@@ -27,6 +27,7 @@
           src="./images/04-about/cow-01-mobile.png"
           alt="Bio Eco"
           loading="lazy"
+          data-aos="zoom-in-up"
       /></picture>
       <div class="about__wrapper">
         <p class="about__text">
