--- a/src/sass/components/_08-contacts.scss
+++ b/src/sass/components/_08-contacts.scss
@@ -302,9 +302,11 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 4;
-
+  transition-property: visibility, opacity;
+  @include transition;
   &.is-hidden {
     visibility: hidden;
+    opacity: 0;
     pointer-events: none;
   }
 }
