--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -17,7 +17,7 @@
                 <p class="info__title">food trucks</p>
             </li>
         </ul>
-        
+
         <picture>
             <source srcset="
                 images/01-header/icecream-desk-min.png 1x,
@@ -34,10 +34,12 @@
                 ./images/01-header/icecream-mob-2x-min.png 2x"
                 media="(min-width: 320px)">
 
-            <img data-aos="fade-left" class="hero__image--icecream animate__animated animate__bounce"
+            <img class="hero__image--icecream"
                 src="./images/01-header/icecream-desk-min.png"
                 alt="icecream"
-                loading = "lazy">
+                loading = "lazy"
+                data-aos="fade-up">
+                
 
         </picture>
         
@@ -53,9 +55,11 @@
                 media="(min-width: 768px)">
 
                 
-                    <img data-aos="fade-left" class="hero__image--girl" src="./images/01-header/girl-desk-min.png"
+                    <img class="hero__image--girl" src="./images/01-header/girl-desk-min.png"
                     alt="girl wiwth icecream"
-                    loading = "lazy">
+                    loading = "lazy"
+                    data-aos="fade-left">
+                    
 
 
         </picture>
@@ -89,7 +93,8 @@
                 src="./images/01-header/milk-desk-min.png"
                 alt="Eco Milk"
                 loading = "lazy"
-                />
+                data-aos="fade-right">
+                
             </picture>
 
             <div class="hero__info-wrap">
