--- a/src/partials/06-gallery.html
+++ b/src/partials/06-gallery.html
@@ -30,6 +30,7 @@
           src="./images/06-gallery/gallery-pic-1-mob-1x.png"
           alt="gallery-img1"
           loading="lazy"
+          data-aos="fade-right">
         /> </picture
     ></a>
     <a
@@ -61,6 +62,7 @@
           src="./images/06-gallery/gallery-pic-2-mob-1x.png"
           alt="gallery-img2"
           loading="lazy"
+          data-aos="fade-down"
         /> </picture
     ></a>
     <a
@@ -92,6 +94,7 @@
           src="./images/06-gallery/gallery-pic-3-mob-1x.png"
           alt="gallery-img3"
           loading="lazy"
+          data-aos="fade-up"
         /> </picture></a
     ><a
       class="gallery-content__img"
@@ -122,6 +125,7 @@
           src="./images/06-gallery/gallery-pic-4-mob-1x.png"
           alt="gallery-img4"
           loading="lazy"
+          data-aos="fade-down"
         /> </picture
     ></a>
     <a
@@ -153,6 +157,7 @@
           src="./images/06-gallery/gallery-pic-5-mob-1x.png"
           alt="gallery-img5"
           loading="lazy"
+          data-aos="fade-up"
         /> </picture
     ></a>
     <a
@@ -184,6 +189,7 @@
           src="./images/06-gallery/gallery-pic-6-mob-1x.png"
           alt="gallery-img6"
           loading="lazy"
+          data-aos="fade-down"
         /> </picture
     ></a>
     <a
@@ -215,6 +221,7 @@
           src="./images/06-gallery/gallery-pic-7-mob-1x.png"
           alt="gallery-img7"
           loading="lazy"
+          data-aos="fade-up"
         /> </picture
     ></a>
     <a
@@ -246,6 +253,7 @@
           src="./images/06-gallery/gallery-pic-8-mob-1x.png"
           alt="gallery-img8"
           loading="lazy"
+          data-aos="fade-left"
         /> </picture
     ></a>
     <a
@@ -277,6 +285,7 @@
           src="./images/06-gallery/gallery-pic-9-mob-1x.png"
           alt="gallery-img9"
           loading="lazy"
+          data-aos="fade-up"
         /> </picture
     ></a>
     <a
@@ -308,6 +317,7 @@
           src="./images/06-gallery/gallery-pic-10-mob-1x.png"
           alt="gallery-img10"
           loading="lazy"
+          data-aos="fade-left"
         /> </picture
     ></a>
   </div>
