--- a/src/partials/07-reviews.html
+++ b/src/partials/07-reviews.html
@@ -1,8 +1,10 @@
-<section class="container review-section">
+<section class="container review-section ">
   <h2 class="review-title">Customers review</h2>
   <div class="swiper">
     <div class="swiper-wrapper">
-      <div class="review swiper-slide">
+      <div class="review swiper-slide"
+      data-aos="zoom-in-up"
+      >
         <img
           srcset="
             ./images/07-reviews/customer1-1x.png 1x,
