--- a/src/partials/01-header.html
+++ b/src/partials/01-header.html
@@ -1,96 +1,86 @@
 <header class="header">
-    <div class="header__container container">     
-        <a href="/">
-            <svg class="header__logo-icon" width = "200" height = "50">
-                <use href="./images/01-header/icons.svg#logo-milk"></use>
-            </svg>
-         </a>   
+  <div class="header__container container">
+    <a href="/">
+      <svg class="header__logo-icon" width="200" height="50">
+        <use href="./images/01-header/icons.svg#logo-milk"></use>
+      </svg>
+    </a>
 
-        <nav class="header__nav">
-            <ul class="header__list">
-                <li class="header__item">
-                    <a href="" class = "header__link header__link--current">Home</a>
-                </li>
+    <nav class="header__nav">
+      <ul class="header__list">
+        <li class="header__item">
+          <a href="#hero" class="header__link header__link--current">Home</a>
+        </li>
 
-                <li class="header__item">
-                    <a href="./" class = "header__link">About us</a>
-                </li>
+        <li class="header__item">
+          <a href="#about" class="header__link">About us</a>
+        </li>
 
-                <li class="header__item">
-                    <a href="./" class= "header__link">How it’s made?</a>
-                </li>
+        <li class="header__item">
+          <a href="#about" class="header__link">How it’s made?</a>
+        </li>
 
-                <li class="header__item">
-                    <a href="./" class= "header__link">Our products</a>
-                </li>
+        <li class="header__item">
+          <a href="#products" class="header__link">Our products</a>
+        </li>
 
-                <li class="header__item">
-                    <a href="./" class = "header__link">Contact</a>
-                </li>        
-            </ul>
-        </nav>
-        <div class="btn-wrap">
-            <button class="header__menu-open btn" type="button" data-menu-open>
-                <svg width = "20" height = "12">
-                    <use href = "./images/01-header/icons.svg#burger"></use>
-                </svg>
-            </button>
-            <button class="header__menu-btn button btn"> Buy now
-                <svg class="header__btn-icon" width ="6" height = "10">
-                    <use href ="./images/01-header/icons.svg#btn-icon"></use>
-                </svg>
-            </button> 
-        </div>
+        <li class="header__item">
+          <a href="#contacts" class="header__link">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="btn-wrap">
+      <button class="header__menu-open btn" type="button" data-menu-open>
+        <svg width="20" height="12">
+          <use href="./images/01-header/icons.svg#burger"></use>
+        </svg>
+      </button>
+      <button class="header__menu-btn button btn">
+        Buy now
+        <svg class="header__btn-icon" width="6" height="10">
+          <use href="./images/01-header/icons.svg#btn-icon"></use>
+        </svg>
+      </button>
     </div>
+  </div>
 
-          <!-- MOBILE MENU -->
-   
+  <!-- MOBILE MENU -->
 </header>
-    <div class="backdrop is-hidden" data-menu>
-        <div class="mob-menu mob-container">
-            
-            <button class="mob-menu__close btn" data-menu-close>
-                <svg class="close__icon" width = "14" height = "14">
-                    <use href ="./images/01-header/icons.svg#close-icon"></use>
-                </svg>
-            </button>
-            
-            <button class="mob-menu__button button btn"> Buy now
-                <svg class="header__btn-icon" width ="6" height = "10">
-                    <use href ="./images/01-header/icons.svg#btn-icon"></use>
-                </svg>
-            </button>
+<div class="backdrop is-hidden" data-menu>
+  <div class="mob-menu mob-container">
+    <button class="mob-menu__close btn" data-menu-close>
+      <svg class="close__icon" width="14" height="14">
+        <use href="./images/01-header/icons.svg#close-icon"></use>
+      </svg>
+    </button>
 
-            <ul class="mob-menu__list">
-                
-                <li class="mob-menu__item">
-                    <a href="" class="mob-menu__link mob-menu__link--current">Home</a>
-                </li>
+    <button class="mob-menu__button button btn">
+      Buy now
+      <svg class="header__btn-icon" width="6" height="10">
+        <use href="./images/01-header/icons.svg#btn-icon"></use>
+      </svg>
+    </button>
 
-                <li class="mob-menu__item">
-                    <a href="" class="mob-menu__link">About us</a>
-                </li>
+    <ul class="mob-menu__list">
+      <li class="mob-menu__item">
+        <a href="#hero" class="mob-menu__link mob-menu__link--current">Home</a>
+      </li>
 
-                <li class="mob-menu__item">
-                    <a href="" class="mob-menu__link">How it’s made?</a>
-                </li>
+      <li class="mob-menu__item">
+        <a href="#about" class="mob-menu__link">About us</a>
+      </li>
 
-                <li class="mob-menu__item">
-                    <a href="" class="mob-menu__link">Our products</a>
-                </li>
-                
-                <li class="mob-menu__item">
-                    <a href="" class="mob-menu__link">Contact</a>
-                </li>
+      <li class="mob-menu__item">
+        <a href="#about" class="mob-menu__link">How it’s made?</a>
+      </li>
 
-            </ul>
-            
-        </div>
-    </div>         
+      <li class="mob-menu__item">
+        <a href="#products" class="mob-menu__link">Our products</a>
+      </li>
 
-    
-
-                
-
-
-
+      <li class="mob-menu__item">
+        <a href="#contacts" class="mob-menu__link">Contact</a>
+      </li>
+    </ul>
+  </div>
+</div>
