нашел в чем было дело! можешь мерджить это

--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -38,7 +38,7 @@
                 src="./images/01-header/icecream-desk-min.png"
                 alt="icecream"
                 loading = "lazy"
-                data-aos="fade-up">
+                data-aos="zoom-in">
                 
 
         </picture>
@@ -92,8 +92,8 @@
                 class="hero-img--milk"
                 src="./images/01-header/milk-desk-min.png"
                 alt="Eco Milk"
-                loading = "lazy"
-                data-aos="fade-right">
+                loading = "lazy">
+                <!-- data-aos="fade-right"> -->
                 
             </picture>
 
