--- a/src/partials/06-gallery.html
+++ b/src/partials/06-gallery.html
@@ -17,7 +17,7 @@
             ./images/06-gallery/gallery-pic-1-tab-1x-min.png 1x,
             ./images/06-gallery/gallery-pic-1-tab-2x-min.png 2x
           "
-          media="(min-width: 768px) "
+          media="(min-width: 768px)"
         />
         <source
           srcset="
@@ -30,9 +30,10 @@
           src="./images/06-gallery/gallery-pic-1-mob-1x.png"
           alt="gallery-img1"
           loading="lazy"
-          data-aos="fade-right">
-        /> </picture
-    ></a>
+          data-aos="fade-up"/>
+          
+        </picture>
+    </a>
     <a
       class="gallery-content__img"
       href="./images/06-gallery/gallery-pic-2-desc-2x-min.png"
@@ -94,7 +95,7 @@
           src="./images/06-gallery/gallery-pic-3-mob-1x.png"
           alt="gallery-img3"
           loading="lazy"
-          data-aos="fade-up"
+          data-aos="fade-left"
         /> </picture></a
     ><a
       class="gallery-content__img"
@@ -125,7 +126,7 @@
           src="./images/06-gallery/gallery-pic-4-mob-1x.png"
           alt="gallery-img4"
           loading="lazy"
-          data-aos="fade-down"
+          data-aos="fade-up"
         /> </picture
     ></a>
     <a
@@ -157,8 +158,7 @@
           src="./images/06-gallery/gallery-pic-5-mob-1x.png"
           alt="gallery-img5"
           loading="lazy"
-          data-aos="fade-up"
-        /> </picture
+          data-aos="fade-up"/> </picture
     ></a>
     <a
       class="gallery-content__img"
@@ -189,7 +189,7 @@
           src="./images/06-gallery/gallery-pic-6-mob-1x.png"
           alt="gallery-img6"
           loading="lazy"
-          data-aos="fade-down"
+          data-aos="fade-up"
         /> </picture
     ></a>
     <a
@@ -253,7 +253,7 @@
           src="./images/06-gallery/gallery-pic-8-mob-1x.png"
           alt="gallery-img8"
           loading="lazy"
-          data-aos="fade-left"
+          data-aos="fade-up"
         /> </picture
     ></a>
     <a
@@ -317,7 +317,7 @@
           src="./images/06-gallery/gallery-pic-10-mob-1x.png"
           alt="gallery-img10"
           loading="lazy"
-          data-aos="fade-left"
+          data-aos="fade-up"
         /> </picture
     ></a>
   </div>
