--- a/src/sass/components/_01-header.scss
+++ b/src/sass/components/_01-header.scss
@@ -1,246 +1,353 @@
 // reset //
 
-
 .btn {
-    border: none;
-    background-color: transparent;
-    font-family: inherit;
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
 }
 
 .header {
-    position: absolute;
-    background-color: var(--bgColorHero);
-    width: 100%;
-    top:0;
+  position: absolute;
+  background-color: var(--bgColorHero);
+  width: 100%;
+  top: 0;
 }
 
-.header__container {    
-    position: relative;
-    z-index: 3;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 6px;
-    @include mq (tab) {
-        padding-top: 32px;
-        padding-inline: 32px;
-
-    }
-    @include mq(desc) {
-        padding-top: 37px;
-        padding-inline: 16px;
-    }
+.header__container {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 6px;
+  @include mq(tab) {
+    padding-top: 32px;
+    padding-inline: 32px;
+  }
+  @include mq(desc) {
+    padding-top: 37px;
+    padding-inline: 16px;
+  }
 }
 
 .header__menu-btn {
-    display: none;
-    min-width: 159px;
-    min-height: 44px;
+  display: none;
+  min-width: 159px;
+  min-height: 44px;
+  @include mq(tab) {
+    display: flex;
+  }
+  &-open {
     @include mq(tab) {
-        display: flex;
+      margin-right: 30px;
     }
-    &-open {
-        @include mq(tab) {
-        margin-right: 30px;
-        }
-        @include mq(desc) {
-        }
+    @include mq(desc) {
     }
+  }
 }
 
 .header__menu-open {
-    @include mq(tab) {
-        margin-right: 32px;
-    }
-    @include mq(desc) {
-        display: none;
-    }
+  @include mq(tab) {
+    margin-right: 32px;
+  }
+  @include mq(desc) {
+    display: none;
+  }
 }
 
-
-.btn-wrap{
-    display: flex;
-} 
-
+.btn-wrap {
+  display: flex;
+}
 
 .button {
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 
-    font-weight: 700px;
-    font-size: 16px;
-    line-height: 1.31;
-    text-align: center;
-  
-    border: none;
-    border-radius: 22px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
+  text-align: center;
 
-    background-color: var(--colorPrimary);
-    color: var(--colorSecondary);
-    
-    &:hover,
-    &:focus {
-        background-color:var( --btnBgColorHover);
-    }
+  border: none;
+  border-radius: 22px;
+
+  background-color: var(--colorPrimary);
+  color: var(--colorSecondary);
+
+  &:hover,
+  &:focus {
+    background-color: var(--btnBgColorHover);
+  }
 }
 
 .header__btn-icon {
-    margin-left: 12px;
+  margin-left: 12px;
 }
 
 .header__nav {
-    display: flex;
+  display: flex;
 }
 
 .header__list {
-    display: none;
+  display: none;
 
-    @include mq(desc) {
-        display: flex;
-    }
+  @include mq(desc) {
+    display: flex;
+  }
 }
 
-.header__item:not(:last-child){
-margin-right: 35px;
+.header__item:not(:last-child) {
+  margin-right: 35px;
 }
 
 .header__link {
-    font-family: var(--fontPrimary);
+  font-family: var(--fontPrimary);
 
-    font-weight: 700;
-    font-style: normal;
-    font-size: 16px;
-    line-height: 1.31;
-    padding: 10px 0;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.31;
+  padding: 10px 0;
 
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    color: #ffffff;
-    transition: all 250ms cubic-bezier(0.77, 0, 0.175, 1);
-    &:hover,&focus{
+  color: #ffffff;
+  transition: all 250ms cubic-bezier(0.77, 0, 0.175, 1);
+  &:hover,
+  &focus {
     color: var(--colorSecondary);
-    }
+  }
 }
 
 .header__link--current,
-.mob-menu__link--current{
-    color: var(--colorSecondary);
+.mob-menu__link--current {
+  color: var(--colorSecondary);
 }
 
-
-
-            // mob-menu //
+// mob-menu //
 
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(66, 4, 4, 0.4);
-    z-index: 12;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(66, 4, 4, 0.4);
+  z-index: 12;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    @include mq (desc) {
-        display: none;
-    }   
-}     
+  @include mq(desc) {
+    display: none;
+  }
+}
 
 .mob-menu {
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 5;
-    display: flex;
-    flex-direction: column;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
 
-    width: 250px;
-    height: 100vh;
-    padding: 60px 0;
-    background-color: #E17992;
+  width: 250px;
+  height: 100vh;
+  padding: 60px 0;
+  background-color: #e17992;
 
-    transition-property: transform;
-    @include transition;
-    // transition: tran sform 250ms ease-in-out;
+  transition-property: transform;
+  @include transition;
+  // transition: tran sform 250ms ease-in-out;
 
-
-    @include mq (tab) {
-        padding-top: 58px;
-        width: 254px;
-    }
-    @include mq (desc) {
-        display: none;
-    }
+  @include mq(tab) {
+    padding-top: 58px;
+    width: 254px;
+  }
+  @include mq(desc) {
+    display: none;
+  }
 }
-
-
-
 
 .backdrop.is-hidden .mob-menu {
-    transform: translateX(100%); 
-  }
-  
-
-.is-hidden {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-    }  
-
-
-
-.mob-menu__button {
-    width: 209px;
-    height: 44px;
-    margin-right: 32px;
-    margin-left: 32px;
-    @include mq (tab) {
-        width: 186px;
-    }
+  transform: translateX(100%);
 }
 
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.mob-menu__button {
+  width: 209px;
+  height: 44px;
+  margin-right: 32px;
+  margin-left: 32px;
+  @include mq(tab) {
+    width: 186px;
+  }
+}
 
 .mob-menu__list {
-    margin-top: 32px;
+  margin-top: 32px;
 }
 
 .mob-menu__item {
-    display: flex;
-    height: 42px;
-    padding-left: 20px;
-    border-top: 1px solid #E18298;
-    border-bottom: 1px solid #E18298;
-    align-items: center;
-    }
+  display: flex;
+  height: 42px;
+  padding-left: 20px;
+  border-top: 1px solid #e18298;
+  border-bottom: 1px solid #e18298;
+  align-items: center;
+}
 
 .mob-menu__link {
-    font-family: var(--fontPrimary);
+  font-family: var(--fontPrimary);
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.28;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.28;
+  padding-top: 15px;
+  padding-bottom: 15px;
 
-    color: #ffffff;
-    transition: all 250ms cubic-bezier(0.77, 0, 0.175, 1);
-    &:hover,&focus{
+  color: #ffffff;
+  transition: all 250ms cubic-bezier(0.77, 0, 0.175, 1);
+  &:hover,
+  &focus {
     color: var(--colorSecondary);
-    }
+  }
 }
 
 .mob-menu__link--current {
-    color: var(--colorSecondary);
+  color: var(--colorSecondary);
 }
 
-
 .mob-menu__close {
-    position: absolute;
-    top:20px    ;
-    right: 32px;
+  position: absolute;
+  top: 20px;
+  right: 32px;
 }
 
 .close__icon {
-    fill: var(--colorPrimary);
+  fill: var(--colorPrimary);
+}
+/* Modal */
+.backdrop-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition-property: opacity, visibility;
+  @include transition;
+
+  overflow: scroll;
+  z-index: 10000;
+
+  @media screen and (max-height: 625px) {
+    overflow-y: scroll;
+  }
+
+  &.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+
+    & .modal-header {
+      visibility: hidden;
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(0.9);
+    }
+  }
+}
+.modal-open {
+  overflow: hidden;
+}
+.modal-header {
+  position: absolute;
+  width: calc(100% - 30px);
+  max-width: 450px;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, 0) scale(1);
+  padding: 40px;
+
+  background-color: var(--bgColorSecondary);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transition-property: opacity, visibility, transform;
+  @include transition;
+
+  @media screen and (min-width: 480px) {
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  @media screen and (min-width: $desktop) {
+    max-width: 528px;
+  }
+  background-image: url(../images/04-about/about-bg-mob.png);
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/04-about/about-bg-mob@2x.png);
+  }
+
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0% 78%;
+
+  @media screen and (min-width: 480px) {
+    background-image: url(../images/04-about/about-bg-desk.png);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/04-about/about-bg-desk@2x.png);
+    }
+  }
+}
+.modal__btn {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: var(--bgColorPrimary);
+  border: 0px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  &:hover,
+  &:focus {
+    background-color: var(--btnBgColorHover);
+  }
+}
+
+.modal__icon {
+  fill: var(--colorSecondary);
+  transition-property: fill;
+  @include transition;
+}
+.modal__title {
+  font-family: var(--fontSecondary);
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  @media screen and (min-width: $desktop) {
+    font-size: 48px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
 }
