--- a/src/sass/components/_01-header.scss
+++ b/src/sass/components/_01-header.scss
@@ -269,9 +269,9 @@
   position: absolute;
   width: calc(100% - 30px);
   max-width: 450px;
-  top: 0%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, 0) scale(1);
+  transform: translate(-50%, -50%) scale(1);
   padding: 40px;
 
   background-color: var(--bgColorSecondary);
@@ -311,7 +311,7 @@
     }
   }
 }
-.modal__btn {
+.modal-header__btn {
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -332,22 +332,209 @@
   }
 }
 
-.modal__icon {
+.modal-header__icon {
   fill: var(--colorSecondary);
   transition-property: fill;
   @include transition;
 }
-.modal__title {
+.modal-header__title {
   font-family: var(--fontSecondary);
+  color: var(--colorSecondary);
   font-weight: 400;
   font-size: 34px;
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+
+  margin-bottom: 20px;
   @media screen and (min-width: $desktop) {
     font-size: 48px;
     line-height: 1.14;
     letter-spacing: 0.06em;
+
+    margin-bottom: 40px;
+  }
+}
+// Fieldset
+.fieldset {
+  display: flex;
+  flex-direction: column;
+
+  margin: 0px;
+  padding: 0px;
+
+  border: none;
+}
+
+.fieldset__label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: var(--colorSubText);
+  position: absolute;
+  bottom: calc(100% + 4px);
+  left: 0;
+
+  transition: color;
+  @include transition;
+}
+
+.fieldset__wrapper {
+  position: relative;
+  display: flex;
+
+  margin-bottom: 28px;
+  &--last {
+    margin-bottom: 20px;
+  }
+}
+
+.fieldset__input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 25px;
+  min-height: 40px;
+  width: 100%;
+  padding-left: 42px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus-visible {
+    border: 1px solid var(--colorSecondary);
+    outline: transparent;
+  }
+  &:focus-visible + .fieldset__icon {
+    fill: var(--colorSecondary);
+  }
+  &:focus-visible ~ .fieldset__label {
+    color: var(--colorSecondary);
+  }
+}
+
+.fieldset__icon {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.fieldset__comment {
+  padding: 12px 16px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  width: 100%;
+  height: 120px;
+
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus-visible {
+    border: 1px solid var(--colorSecondary);
+    outline: transparent;
+  }
+  &:focus-visible ~ .fieldset__label {
+    color: var(--colorSecondary);
+  }
+
+  @media screen and (min-width: $desktop) {
+    font-size: 12px;
+    line-height: 1.166;
+  }
+}
+
+.fieldset__send {
+  background: var(--btnBgColor);
+  //   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  //   border-width: 0px;
+  border-radius: 25px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  //   border-color: transparent;
+
+  padding: 10px 55px 10px 56px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+
+  letter-spacing: 0.06em;
+
+  color: var(--colorSecondary);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background: var(--btnBgColorHover);
+  }
+}
+/* Checkbox */
+.checkbox {
+  display: flex;
+
+  // align-items: center;
+  justify-content: center;
+}
+
+.checkbox__input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  &:focus + .checkbox__label .checkbox__icon {
+    border: 2px solid var(--colorSecondary);
+  }
+  &:checked + .checkbox__label .checkbox__icon {
+    border: none;
+    fill: var(--colorSecondary);
+  }
+}
+
+.checkbox__label {
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+
+  color: var(--colorSubText);
+  @media screen and (min-width: $desktop) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+.checkbox__icon {
+  flex-shrink: 0;
+  border: 2px solid #212121;
+  border-radius: 4px;
+  fill: transparent;
+
+  margin-right: 8px;
+}
+
+.checkbox__terms {
+  color: var(--colorSubText);
+  text-decoration: underline;
+  // text-decoration: none;
+  // background-image: linear-gradient(currentColor, currentColor);
+  // background-position: 0% 90%;
+  // background-repeat: no-repeat;
+  // background-size: 100% 1px;
+
+  &:visited {
+    color: var(--colorText);
   }
 }
