added animation to milk picture at hero

--- a/src/partials/02-hero.html
+++ b/src/partials/02-hero.html
@@ -71,7 +71,7 @@
         src="./images/01-header/girl-desk-min.png"
         alt="girl wiwth icecream"
         loading="lazy"
-        data-aos="fade-left"
+        data-aos="zoom-in-left"
       />
     </picture>
 
@@ -113,8 +113,8 @@
           src="./images/01-header/milk-desk-min.png"
           alt="Eco Milk"
           loading="lazy"
+          data-aos="zoom-in-right"
         />
-        <!-- data-aos="fade-right"> -->
       </picture>
 
       <div class="hero__info-wrap">
